08-egress-restriction-incident/manifests/test-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: network-test

spec:
  containers:
  - name: network-test
    image: amazonlinux:latest
    command:
      - sleep
      - "3600"
