08-egress-restriction-incident/manifests/deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: deny-all-egress

spec:
  podSelector: {}

  policyTypes:
  - Egress

  egress: []
